# readmd

./: README.md  pyproject.toml  requirements.txt
src/readmd/: __main__.py
src/readmd/app/: __init__.py  main.py  style.py  themes.py
