[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "readmd"
authors = [
    { name = "Hannes Weichelt", email = "main@hweichelt.de" }
]
description = "A simple terminal markdown editor"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dynamic = [ "version" ]
readme = "README.md"
dependencies = [
    "textual==0.88",
]


[project.urls]
Homepage = "https://github.com/hweichelt/readmd.git/"

[project.optional-dependencies]
format = [ "black", "isort", "autoflake" ]
lint_pylint = [ "pylint" ]
typecheck = [ "types-setuptools", "mypy" ]
test = [ "coverage[toml]" ]
doc = [ "sphinx", "furo", "nbsphinx", "sphinx_copybutton", "myst-parser" ]
dev = [ "readmd[test,typecheck,lint_pylint]" ]

[project.scripts]
readmd = "readmd.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
